// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TinyMceWidget snapshots ImageUploadModal is not rendered 1`] = `
<Fragment>
  <SourceCodeModal
    close={[MockFunction modal.closeModal]}
    editorRef={
      {
        "current": {
          "value": "something",
        },
      }
    }
    isOpen={false}
  />
  <Editor
    disabled={false}
    editorConfig={
      {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "content": undefined,
        "editorContentHtml": undefined,
        "editorRef": {
          "current": {
            "value": "something",
          },
        },
        "editorType": "text",
        "enableImageUpload": false,
        "images": {
          "current": [
            {
              "externalUrl": "/assets/sOmEaSsET",
            },
          ],
        },
        "initializeEditor": undefined,
        "learningContextId": "course+org+run",
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "minHeight": undefined,
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "placeholder": undefined,
        "selection": "hooks.selectedImage.selection",
        "setEditorRef": undefined,
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "staticRootUrl": undefined,
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
        "updateContent": [Function],
      }
    }
    id="sOMeiD"
    onEditorChange={[Function]}
  />
</Fragment>
`;

exports[`TinyMceWidget snapshots SourcecodeModal is not rendered 1`] = `
<Fragment>
  <ImageUploadModal
    clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
    close={[MockFunction modal.closeModal]}
    editorRef={
      {
        "current": {
          "value": "something",
        },
      }
    }
    editorType="problem"
    images={
      {
        "current": [
          {
            "externalUrl": "/assets/sOmEaSsET",
          },
        ],
      }
    }
    isLibrary={true}
    isOpen={false}
    lmsEndpointUrl="http://localhost:18000"
    selection="hooks.selectedImage.selection"
    setSelection={[MockFunction hooks.selectedImage.setSelection]}
  />
  <Editor
    disabled={false}
    editorConfig={
      {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "content": undefined,
        "editorContentHtml": undefined,
        "editorRef": {
          "current": {
            "value": "something",
          },
        },
        "editorType": "problem",
        "enableImageUpload": true,
        "images": {
          "current": [
            {
              "externalUrl": "/assets/sOmEaSsET",
            },
          ],
        },
        "initializeEditor": undefined,
        "learningContextId": "course+org+run",
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "minHeight": undefined,
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "placeholder": undefined,
        "selection": "hooks.selectedImage.selection",
        "setEditorRef": undefined,
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "staticRootUrl": undefined,
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
        "updateContent": [Function],
      }
    }
    id="sOMeiD"
    onEditorChange={[Function]}
  />
</Fragment>
`;

exports[`TinyMceWidget snapshots renders as expected with default behavior 1`] = `
<Fragment>
  <ImageUploadModal
    clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
    close={[MockFunction modal.closeModal]}
    editorRef={
      {
        "current": {
          "value": "something",
        },
      }
    }
    editorType="text"
    images={
      {
        "current": [
          {
            "externalUrl": "/assets/sOmEaSsET",
          },
        ],
      }
    }
    isLibrary={true}
    isOpen={false}
    lmsEndpointUrl="http://localhost:18000"
    selection="hooks.selectedImage.selection"
    setSelection={[MockFunction hooks.selectedImage.setSelection]}
  />
  <SourceCodeModal
    close={[MockFunction modal.closeModal]}
    editorRef={
      {
        "current": {
          "value": "something",
        },
      }
    }
    isOpen={false}
  />
  <Editor
    disabled={false}
    editorConfig={
      {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "content": undefined,
        "editorContentHtml": undefined,
        "editorRef": {
          "current": {
            "value": "something",
          },
        },
        "editorType": "text",
        "enableImageUpload": true,
        "images": {
          "current": [
            {
              "externalUrl": "/assets/sOmEaSsET",
            },
          ],
        },
        "initializeEditor": undefined,
        "learningContextId": "course+org+run",
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "minHeight": undefined,
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "placeholder": undefined,
        "selection": "hooks.selectedImage.selection",
        "setEditorRef": undefined,
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "staticRootUrl": undefined,
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
        "updateContent": [Function],
      }
    }
    id="sOMeiD"
    onEditorChange={[Function]}
  />
</Fragment>
`;
